--- a/TestCalendar/Test Calendar/Base.lproj/Main.storyboard
+++ b/TestCalendar/Test Calendar/Base.lproj/Main.storyboard
@@ -20,12 +20,11 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-284" y="619"/>
+            <point key="canvasLocation" x="-284" y="618.44077961019491"/>
         </scene>
         <!--AddEvent-->
         <scene sceneID="jtx-Le-HfV">
