カレンダーの表示

--- a/TestCalendar/Test Calendar/Base.lproj/Main.storyboard
+++ b/TestCalendar/Test Calendar/Base.lproj/Main.storyboard
@@ -138,31 +138,47 @@
                                     <constraint firstItem="efn-PW-JQw" firstAttribute="width" secondItem="RCm-5u-nz0" secondAttribute="width" id="tYO-CA-kDk"/>
                                 </constraints>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qcs-zX-3oZ">
-                                <rect key="frame" x="20.666666666666657" y="174" width="372.66666666666663" height="508"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Zyj-9F-7RI">
+                                <rect key="frame" x="20" y="174" width="373" height="508"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RSi-ge-7lD">
+                                    <size key="itemSize" width="52" height="60"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="k4L-Dc-DW0" customClass="CalendarCell" customModule="Test_Calendar" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="52" height="60"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="52" height="60"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="qcs-zX-3oZ" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.69" id="10r-4z-OOJ"/>
+                            <constraint firstItem="Zyj-9F-7RI" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.69" id="Erf-xr-aJC"/>
                             <constraint firstItem="tk9-as-7kA" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.64" id="JCm-2B-EIF"/>
                             <constraint firstItem="dLw-Dh-QSa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Je2-zb-QW7"/>
-                            <constraint firstItem="qcs-zX-3oZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="JjZ-6u-QRr"/>
                             <constraint firstItem="SsA-gS-RsL" firstAttribute="top" secondItem="tk9-as-7kA" secondAttribute="top" constant="44" id="MHu-eC-Rmf"/>
-                            <constraint firstItem="qcs-zX-3oZ" firstAttribute="top" secondItem="SsA-gS-RsL" secondAttribute="top" constant="35" id="Qez-Ai-tUb"/>
                             <constraint firstItem="SsA-gS-RsL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Qwq-qZ-PDT"/>
                             <constraint firstAttribute="trailing" secondItem="dLw-Dh-QSa" secondAttribute="trailing" id="Wd0-bz-PKw"/>
                             <constraint firstItem="SsA-gS-RsL" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.9" id="X1Q-YY-Sr1"/>
                             <constraint firstItem="tk9-as-7kA" firstAttribute="top" secondItem="dLw-Dh-QSa" secondAttribute="top" constant="75" id="YOq-US-t23"/>
+                            <constraint firstItem="Zyj-9F-7RI" firstAttribute="top" secondItem="SsA-gS-RsL" secondAttribute="top" constant="35" id="c60-3i-q0g"/>
                             <constraint firstItem="dLw-Dh-QSa" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.08" id="caT-YQ-3JJ"/>
                             <constraint firstItem="tk9-as-7kA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jG4-5r-f6p"/>
-                            <constraint firstItem="qcs-zX-3oZ" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.9" id="skY-Zx-VAP"/>
+                            <constraint firstItem="Zyj-9F-7RI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kyQ-i3-3AJ"/>
+                            <constraint firstItem="Zyj-9F-7RI" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.9" id="pai-GK-0qe"/>
                             <constraint firstItem="dLw-Dh-QSa" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="zb4-Qu-9nN"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="collectionView" destination="qcs-zX-3oZ" id="6dt-jC-SgD"/>
+                        <outlet property="collectionView" destination="Zyj-9F-7RI" id="LVn-bi-nGC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
