--- a/TestCalendar/Test Calendar/ShowDetail.storyboard
+++ b/TestCalendar/Test Calendar/ShowDetail.storyboard
@@ -1,7 +1,147 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="T8y-eI-bGT">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Show Day View Controller-->
+        <scene sceneID="POh-rc-Geb">
+            <objects>
+                <viewController id="T8y-eI-bGT" customClass="ShowDayViewController" customModule="Test_Calendar" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="a9N-A8-CZ4"/>
+                        <viewControllerLayoutGuide type="bottom" id="ygD-TG-xoW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tJ8-WG-39o">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="Gl6-8m-uPJ">
+                                <rect key="frame" x="0.0" y="68" width="375" height="580.5"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1uE-Hl-8St" userLabel="Days View">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="66.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="DAY" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DQS-cK-nUq">
+                                                <rect key="frame" x="170.5" y="23" width="34" height="22"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pl0-9P-Twh">
+                                                <rect key="frame" x="85" y="19" width="30" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="&lt;"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="01T-gG-Tdt">
+                                                <rect key="frame" x="268" y="19" width="30" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="&gt;"/>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="DQS-cK-nUq" firstAttribute="centerX" secondItem="1uE-Hl-8St" secondAttribute="centerX" id="ZQP-wd-CFD"/>
+                                            <constraint firstItem="DQS-cK-nUq" firstAttribute="centerY" secondItem="1uE-Hl-8St" secondAttribute="centerY" id="ci7-Sc-qPU"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5E6-Sf-MRT" userLabel="Watch View">
+                                        <rect key="frame" x="0.0" y="66.5" width="375" height="327"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V1p-CE-J69">
+                                                <rect key="frame" x="32" y="0.0" width="311" height="313"/>
+                                                <color key="backgroundColor" red="0.97196739909999996" green="0.1101857408" blue="0.088618464150000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </view>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eR-dC-9SP">
+                                                <rect key="frame" x="31" y="279" width="44" height="44"/>
+                                                <color key="backgroundColor" red="0.068248678470000004" green="0.97196739909999996" blue="0.43760405969999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <state key="normal" title="AM"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J9N-o0-qkS">
+                                                <rect key="frame" x="300" y="279" width="44" height="44"/>
+                                                <color key="backgroundColor" red="0.12775488740204141" green="0.97196739912033081" blue="0.47948314858818297" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <state key="normal" title="PM"/>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="2eR-dC-9SP" firstAttribute="width" secondItem="5E6-Sf-MRT" secondAttribute="width" multiplier="0.117" id="6NR-iY-tF5"/>
+                                            <constraint firstItem="V1p-CE-J69" firstAttribute="centerX" secondItem="5E6-Sf-MRT" secondAttribute="centerX" id="79w-fB-VsI"/>
+                                            <constraint firstItem="V1p-CE-J69" firstAttribute="height" secondItem="5E6-Sf-MRT" secondAttribute="height" multiplier="0.96" id="B0p-Fc-vnZ"/>
+                                            <constraint firstItem="J9N-o0-qkS" firstAttribute="height" secondItem="5E6-Sf-MRT" secondAttribute="height" multiplier="0.135" id="NpN-dw-bfR"/>
+                                            <constraint firstItem="2eR-dC-9SP" firstAttribute="height" secondItem="5E6-Sf-MRT" secondAttribute="height" multiplier="0.135" id="tL5-0x-tc5"/>
+                                            <constraint firstItem="J9N-o0-qkS" firstAttribute="width" secondItem="5E6-Sf-MRT" secondAttribute="width" multiplier="0.117" id="uy4-zx-Mez"/>
+                                            <constraint firstItem="V1p-CE-J69" firstAttribute="width" secondItem="5E6-Sf-MRT" secondAttribute="width" multiplier="0.83" id="w6j-Ux-JPz"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kdK-bM-Ycl" userLabel="Plan View">
+                                        <rect key="frame" x="0.0" y="393.5" width="375" height="187"/>
+                                        <subviews>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pYL-gl-yB4">
+                                                <rect key="frame" x="15" y="0.0" width="345" height="185"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </tableView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="pYL-gl-yB4" firstAttribute="width" secondItem="kdK-bM-Ycl" secondAttribute="width" multiplier="0.92" id="Q7W-Op-LDa"/>
+                                            <constraint firstItem="pYL-gl-yB4" firstAttribute="height" secondItem="kdK-bM-Ycl" secondAttribute="height" id="XLl-Sw-L6Z"/>
+                                            <constraint firstItem="pYL-gl-yB4" firstAttribute="centerX" secondItem="kdK-bM-Ycl" secondAttribute="centerX" id="wXK-MQ-8bp"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="kdK-bM-Ycl" firstAttribute="leading" secondItem="1uE-Hl-8St" secondAttribute="leading" id="1FW-GY-MDj"/>
+                                    <constraint firstItem="1uE-Hl-8St" firstAttribute="centerX" secondItem="Gl6-8m-uPJ" secondAttribute="centerX" id="AaT-Zy-v94"/>
+                                    <constraint firstItem="5E6-Sf-MRT" firstAttribute="leading" secondItem="1uE-Hl-8St" secondAttribute="leading" id="LRx-37-M7I"/>
+                                    <constraint firstItem="kdK-bM-Ycl" firstAttribute="centerX" secondItem="Gl6-8m-uPJ" secondAttribute="centerX" id="UOk-gx-E8e"/>
+                                    <constraint firstItem="5E6-Sf-MRT" firstAttribute="centerX" secondItem="Gl6-8m-uPJ" secondAttribute="centerX" id="eSx-Nd-Jrf"/>
+                                    <constraint firstItem="1uE-Hl-8St" firstAttribute="top" secondItem="Gl6-8m-uPJ" secondAttribute="top" id="iFd-2R-Xv4"/>
+                                    <constraint firstAttribute="bottom" secondItem="kdK-bM-Ycl" secondAttribute="bottom" id="w0Q-wZ-h0d"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kdK-bM-Ycl" firstAttribute="width" secondItem="tJ8-WG-39o" secondAttribute="width" id="ABF-c2-D49"/>
+                            <constraint firstAttribute="trailing" secondItem="Gl6-8m-uPJ" secondAttribute="trailing" id="Qe4-h0-qRj"/>
+                            <constraint firstItem="1uE-Hl-8St" firstAttribute="height" secondItem="tJ8-WG-39o" secondAttribute="height" multiplier="0.1" id="XBj-r6-lyV"/>
+                            <constraint firstItem="5E6-Sf-MRT" firstAttribute="height" secondItem="tJ8-WG-39o" secondAttribute="height" multiplier="0.49" id="aEf-6J-d0m"/>
+                            <constraint firstItem="5E6-Sf-MRT" firstAttribute="width" secondItem="tJ8-WG-39o" secondAttribute="width" id="f06-su-7rs"/>
+                            <constraint firstItem="Gl6-8m-uPJ" firstAttribute="centerX" secondItem="tJ8-WG-39o" secondAttribute="centerX" id="feS-lJ-0zl"/>
+                            <constraint firstItem="1uE-Hl-8St" firstAttribute="width" secondItem="tJ8-WG-39o" secondAttribute="width" id="hQC-SO-MOe"/>
+                            <constraint firstItem="Gl6-8m-uPJ" firstAttribute="leading" secondItem="tJ8-WG-39o" secondAttribute="leading" id="ojB-Rp-kf8"/>
+                            <constraint firstItem="kdK-bM-Ycl" firstAttribute="height" secondItem="tJ8-WG-39o" secondAttribute="height" multiplier="0.28" id="rFh-Rp-qlN"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wmz-E8-6fy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-551.20000000000005" y="-43.628185907046479"/>
+        </scene>
+        <!--Show Subject View Controller-->
+        <scene sceneID="Nhd-9w-bwc">
+            <objects>
+                <viewController id="6F6-3B-djE" customClass="ShowSubjectViewController" customModule="Test_Calendar" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fLI-Tt-sba"/>
+                        <viewControllerLayoutGuide type="bottom" id="7XE-Dp-naa"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cbV-Nh-ljf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x8F-4Y-9Gf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="180" y="-39"/>
+        </scene>
+    </scenes>
 </document>
